# Pysinfo

./: AGENTS.md  pyproject.toml  requirements.txt  run.py  setup.py  upload_pypi.bat  upload_pypi.sh
pysinfo/: __init__.py  setup.py
