[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pysinfo"
dynamic = ["version"]
description = "PySInfo: A python command line tool that displays information about the current system, including hardware and critical software."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "cycleuser", email = "cycleuser@cycleuser.org"}
]
requires-python = ">=3.8"
dependencies = [
    "psutil",
    "distro",
    "GPUtil-fix",
    "colorama"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Hardware",
    "Topic :: System :: Systems Administration",
]
keywords = ["system", "info", "hardware", "cpu", "gpu", "memory", "cuda"]

[project.urls]
Homepage = "https://github.com/EasyCam/Pysinfo"
Repository = "https://github.com/EasyCam/Pysinfo"

[project.scripts]
pysinfo = "pysinfo.__main__:print_system_info"

[tool.setuptools.packages.find]
where = ["."]
include = ["pysinfo*"]

[tool.setuptools.dynamic]
version = {attr = "pysinfo.__version__"}